[gd_scene load_steps=4 format=3 uid="uid://blj8nhwuc8fp8"]

[ext_resource type="Script" uid="uid://3w4ftmttnak0" path="res://ui/menu.gd" id="1_ovw0j"]
[ext_resource type="PackedScene" uid="uid://cmty10gu8bepm" path="res://ui/settings_container.tscn" id="1_tc25c"]
[ext_resource type="PackedScene" uid="uid://2ebr86phk1kr" path="res://Test.tscn" id="2_em05n"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovw0j")
game_scene = ExtResource("2_em05n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
stretch_mode = 6

[node name="Menu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="PlayButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="ParametersButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "PARAM"

[node name="CreditsButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="SettingsContainer" parent="." instance=ExtResource("1_tc25c")]
visible = false
layout_mode = 1

[node name="Credits" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Credits"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Credits/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
bbcode_enabled = true
text = "[center][url=https://lien]Nom[/url] Cr√©ateur[/center]"
fit_content = true

[node name="Return" type="Button" parent="Credits/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_RETURN"

[connection signal="pressed" from="Menu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ParametersButton" to="." method="_on_parameters_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="meta_clicked" from="Credits/PanelContainer/MarginContainer/VBoxContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="Credits/PanelContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
